style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.navbar-container {
  position: fixed;
  width: 100%;
  top: 0;
}

.navbar {
  display: flex;
  justify-content: flex-end;
  list-style: none;
  background-color: #212121;
}

.navbar-item a {
  text-decoration: none;
  color: white;
}

.navbar-item a:hover,
.navbar-item a:active {
  color: lightgray;
}

.navbar-item {
  margin: 0 auto;
}

#start {
  background-color: #424242;
  margin-bottom: 15px;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  background-color: #424242;
  color: white;
}

body {
  margin: 0 auto;
  text-align: center;
}

footer {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  background-color: #212121;
  color: lightgray;
}

.contact {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  line-height: .4em;
  margin-bottom: 0;
}

.contact p:first-of-type {
  margin-top: 5px;
}

.contact p:last-of-type {
  margin-bottom: 7px;
}

footer a {
  text-decoration: none;
  color: lightgray;
}

footer a:hover,
footer a:active {
  color: white;
}

.intro-section {
  background-color: #424242;
  color: white;
  padding: 50% 0;
}

.social-icons {
  display: inline;
}

.social-icons img {
  height: 35px;
  width: 35px;
  padding-right: 7px;
}

.social-icons a:hover,
.social-icons a:active {
  opacity: 60%;
}

.about-section {
  background-color: #555555;
  padding: 50% 0;
}

.about-section img {
  border-radius: 200px;
  height: 30%;
  width: 30%;
  margin-bottom: 20px;
  opacity: 85%;
}

.skills-grid-item img {
  height: 65px;
  width: 65px;
}

